---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2020.12.XX
  Features:
    - Added function `vertical_pipe_shadow` to place shadows at appropriate tile locations for pipes
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2020.11.26
  Features:
    - Moved to Factorio 1.1
    - Added a catch-all to ensure nuclear reactors working light is properly defined for Angels or Bobs
  Changes:
    - Added transcription of `draw_as_light` and `draw_as_glow` fields to `make_4way_animation_from_spritesheet`
    - Added support for progression-based tier coloring for the oil refinery when playing with pure Angel's mods
    - Added `make_glow` boolean to function `ore_icon_pictures` to generate lit ores
  Bugfixes:
    - Fixed that `icon_picture_extras` for icons with single layers was not properly handled by `construct_icon`
---------------------------------------------------------------------------------------------------
Version: 1.0.9
Date: 2020.11.20
  Bugfixes:
    - Fixed that `append_tier_labels_to_vanilla_items` did not allow for non-vanilla icon definitions
  Locale:
    - Updated Brazilian Portuguese, Czech and German localizations
---------------------------------------------------------------------------------------------------
Version: 1.0.8
Date: 2020.11.09
  Bugfixes:
    - Fixed that functions `append_tier_labels` and `append_tier_labels_to_vanilla_items` did not specify `icon_size` and `icon_mipmaps`
---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: 2020.11.08
  Changes:
    - Changed how default indicators for true/false setting descriptions are handled internally
    - Added handling of custom Types/Animation parameter `vertically_oriented` to `make_4way_animation_from_spritesheet`